bat and sh files updated